# cmake-protobuf-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
proto/: CMakeLists.txt  message.proto
